# flutter_spellcheck_hunspell

./: .gitignore  .metadata  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/integration_test/: add_to_dictionary_test.dart  right_click_test.dart  spell_check_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: flutter_spellcheck_hunspell.dart  flutter_spellcheck_hunspell_bindings_generated.dart  hunspell_spell_check_service.dart
lib/src/: hunspell_configuration.dart  hunspell_gesture_detector.dart
src/: CMakeLists.txt  flutter_spellcheck_hunspell.c  flutter_spellcheck_hunspell.cpp  flutter_spellcheck_hunspell.h
test/: hunspell_configuration_test.dart  ignored_patterns_test.dart  library_api_test.dart
tool/: download_dictionaries.dart
windows/: CMakeLists.txt
windows/include/: hunvisapi.h
